# rvcr

./: Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
src/: lib.rs
tests/integration/: e2e.rs  lib.rs  modifiers.rs
tests/resources/: replay.vcr.json  search-all.vcr.json  skip-found.vcr.json  test.vcr
