[package]
name = "rvcr"
version = "0.1.1"
edition = "2021"
description = "Record-and-replay HTTP testing for requests"
repository = "https://github.com/ChorusOne/rvcr/"
authors = ["tech@chorus.one"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[test]]
name = "integration"
path = "tests/integration/lib.rs"

[lib]
path = "src/lib.rs"
name = "rvcr"

[dependencies]
async-trait = "^0.1"
base64 = "0.21.0"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
http = "0.2"
lazy_static = "1.4"
reqwest = { version = "0.11" }
reqwest-middleware = "0.1.6"
serde = "1"
serde_json = "1"
task-local-extensions = "0.1.4"
tracing = {version="0.1.36", features=["log"]}
vcr-cassette = "2"

[dev-dependencies]
tokio = { version = "1.17.0", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
